hear-failure PandasAI done -WORK --CONTROL-COMMIT

--- a/PANDASAI-HEART_FAILURE/pandasai-heart_failure_classification.ipynb
+++ b/PANDASAI-HEART_FAILURE/pandasai-heart_failure_classification.ipynb
@@ -16,17 +16,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pandasai"
+    "import pandasai\n",
+    "import os \n",
+    "from dotenv import dotenv_values\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Environment key\n",
+    "keys = dotenv_values(\"../.env-token\")\n",
+    "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -67,6 +81,7 @@
     }
    ],
    "source": [
+    "init_time = datetime\n",
     "file_dir=\"Data/heart_failure_clinical_records.csv\"\n",
     "file = pd.read_csv(file_dir)\n",
     "file.info()"
@@ -81,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = OpenAI(model=\"gpt-3.5-turbo-1106\")\n",
+    "\n",
+    "llm = OpenAI(model=\"gpt-4o\") # Este es el modelo de OpenAI que vamos a utilizar\n",
     "smartDataFrame = SmartDataframe(file, description=DESCRIPTION, config={\"llm\":llm})"
    ]
   },
@@ -119,38 +135,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exception in APILogger: <!DOCTYPE html>\n",
-      "<html lang=\"en\">\n",
-      "<head>\n",
-      "<meta charset=\"utf-8\">\n",
-      "<title>Error</title>\n",
-      "</head>\n",
-      "<body>\n",
-      "<pre>Cannot POST /api/log/add</pre>\n",
-      "</body>\n",
-      "</html>\n",
-      "\n"
+      "Accuracy: 0.993\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      0.99       698\n",
+      "           1       0.99      0.99      0.99       302\n",
+      "\n",
+      "    accuracy                           0.99      1000\n",
+      "   macro avg       0.99      0.99      0.99      1000\n",
+      "weighted avg       0.99      0.99      0.99      1000\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[694   4]\n",
+      " [  3 299]]\n"
      ]
     }
    ],
    "source": [
-    "response = smartDataFrame.chat(\"Make a classifier for this dataset that predicts if a patient will survive a heart failure? (DEATH_EVENT=1 --> True class)\")"
+    "response = smartDataFrame.chat(\"Make a classifier for this dataset that predicts if a patient will survive a heart failure? (DEATH_EVENT=1 --> True class)\")\n",
+    "print(response)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tiempo de ejecución --> \n",
     "\n",
-    "Coste de ejecuciónn --> "
+    "Coste de ejecuciónn --> <label style=\"color:red\">Parece que no me ha costado nada</label>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sacamos el código y lo ejecutamos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df = dfs[0]\n",
+      "X = df.drop('DEATH_EVENT', axis=1)\n",
+      "y = df['DEATH_EVENT']\n",
+      "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+      "clf = RandomForestClassifier()\n",
+      "clf.fit(X_train, y_train)\n",
+      "y_pred = clf.predict(X_test)\n",
+      "accuracy = accuracy_score(y_test, y_pred)\n",
+      "report = classification_report(y_test, y_pred)\n",
+      "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+      "result = {'type': 'string', 'value': f\"\"\"Accuracy: {accuracy}\n",
+      "\n",
+      "Classification Report:\n",
+      "{report}\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "{conf_matrix}\"\"\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(smartDataFrame.last_code_executed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como podemos ver comparando el código los código de las celdas pegadas a esta no coinciden del todo ya que PandasAI, a diferencia de otras, no devuelve los imports ni printea el resultado ya que este lo devuelve en forma de un report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.992\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      0.99       698\n",
+      "           1       0.98      0.99      0.99       302\n",
+      "\n",
+      "    accuracy                           0.99      1000\n",
+      "   macro avg       0.99      0.99      0.99      1000\n",
+      "weighted avg       0.99      0.99      0.99      1000\n",
+      "\n",
+      "[[692   6]\n",
+      " [  2 300]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "df = file\n",
+    "X = df.drop('DEATH_EVENT', axis=1)\n",
+    "y = df['DEATH_EVENT']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "result = {'type': 'string', 'value': f\"\"\"Accuracy: {accuracy}\n",
+    "\n",
+    "Classification Report:\n",
+    "{report}\n",
+    "\n",
+    "Confusion Matrix:\n",
+    "{conf_matrix}\"\"\"}\n",
+    "\n",
+    "print(accuracy)\n",
+    "print(report)\n",
+    "print(conf_matrix)"
    ]
   }
  ],
