comparación algoritmos transformer completado -WORK --CONTROL-COMMIT

--- a/TRANSFORMER-COMPARISON/transformers_comparison.ipynb
+++ b/TRANSFORMER-COMPARISON/transformers_comparison.ipynb
@@ -1106,7 +1106,11 @@
         "| Matriz de Confusión    | [[2390, 1241], [1736, 2739]]     | [[3552, 79], [105, 4370]]    | [[3594, 37], [46, 4429]]   | [[3594, 37], [46, 4429]] |\n",
         "\n",
         "\n",
-        "Ahora tenemos la tabla final"
+        "Ahora podemos comparar bien los 4 métodos que hemos usado para ver como funcionana los algortimos transformer, por lo menos para este dataset tabular con un prolema de clasificación binaria.  \n",
+        "\n",
+        "Como bien podemos ver en las tablas, los mayores valores para las métricas los ha obtenido XGBoost gracias a su método de árboles de decisión y el boosting que le permiten una gran optimizaación en velocidad y rendimiento.\n",
+        "\n",
+        "En cuanto a los transformers podemos observar como hemos conseeguido, por lo menos con TabNet, superar la baseline propuesta con un MLP en todas las métricas. Por otro lado el FTTransformer no ha logrado pasar la baseline por lo que para este tipo de problemas en los que no tenemos variables del tipo categórico no es muy útil, como podemos ver en la tabla y las gráficas inferiores."
       ]
     },
     {
