comentarios correctos dataset cirrosis -WORK --CONTROL-COMMIT

--- a/AIDE-CIRRHOSIS/aide-cirrhosis.ipynb
+++ b/AIDE-CIRRHOSIS/aide-cirrhosis.ipynb
@@ -22,7 +22,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El modelo a utilizar es gpt-4-turbo"
+    "Tenemos el dataset de Kaggle <a href=\"https://www.kaggle.com/datasets/fedesoriano/cirrhosis-prediction-dataset\">Cirrhosis Prediction Dataset</a> sobre el que queremos predecir la stage en la que podemos encontrarnos de primera mano cuando un paciente llega al hospital, para ello tenemos que crear un clasificador sobre la columna 'stage' del dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El modelo que vamos a utilizar para resolver este problema es el default de AIDE, gpt-4-turbo"
    ]
   },
   {
@@ -65,6 +72,13 @@
    ],
    "source": [
     "pd.read_csv('Data/liver_cirrhosis.csv').info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como en todas las ejecuciones de AIDE creamos previamente lo que le vamos a pasar para tener una visión general previa al funcionamiento del código y luego creamos la instancia experimento de AIDE."
    ]
   },
   {
@@ -236,6 +250,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Como podemos ver a simple vista, AIDE ha tardado muchísimo más en ejecutarse que PandasAI pero este no ha dado errores con los que estamos lidiando además PandasAI es una OpenSource si no quieres usar modelos de pago.\n",
+    "\n",
     "Ahora ejecutamos el código proporcionado para comprobar la solución de AIDE"
    ]
   },
