--- a/PANDASAI-CIRRHOSIS/pandasai-cirrhosis.ipynb
+++ b/PANDASAI-CIRRHOSIS/pandasai-cirrhosis.ipynb
@@ -26,6 +26,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "El código superior que está comentado en los imports es para poder cargar la variable con la clave de la api de PandasAI que por alguna razón no me la quiere leer desde la consola.\n",
+    "\n",
+    "Tenemos el dataset de Kaggle <a href=\"https://www.kaggle.com/datasets/fedesoriano/cirrhosis-prediction-dataset\">Cirrhosis Prediction Dataset</a> sobre el que queremos predecir la stage en la que podemos encontrarnos de primera mano cuando un paciente llega al hospital, para ello tenemos que crear un clasificador sobre la columna 'stage' del dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Voy a utilizar el LLM default --> BambooLM para poder hacer una comparación con AIDE "
    ]
   },
@@ -150,9 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El código ha tardado en ejecutarse <label style=\"color:red\"> </label>\n",
-    "\n",
-    "Sacamos el código recién ejecutado"
+    "Como no ha logrado hacer lo pedido debido a que no es capaz de pasar datos del tipo Object a Floats (hace una conversión directa a String pero no es capaz de hacer la segunda a Float --> aplicando un Encoder) vamos a solucionar el error de forma manual viendo donde ha fallado exactamente y seguimos con la ejecución "
    ]
   },
   {
@@ -932,7 +939,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como podemos ver, ha hecho los cambios pertinentes para que las columnas que antes teníamos como objeto sean del tipo int o incluso binarias para los valores que únicamente tienen 2 posibles valores. \n",
+    "Como podemos ver, ha hecho los cambios necesarios para que las columnas que antes teníamos como objeto sean del tipo int o incluso binarias para los valores que únicamente tienen 2 posibles valores. \n",
     "\n",
     "Sacamos el código recién ejecutado."
    ]
@@ -964,6 +971,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Podríamos haber vuelto a ejecutar una consulta sobre el propio smartDataFrame ejecutado pero prefiero ejecutar luego el código así podemos depurar o incluso ver la forma que va tomando la solución de PandasAI.\n",
+    "\n",
     "Aplicamos el código recién sacado a nuestro dataset para tener el cambio hecho y poder realizar la llamada que primeramente nos daba error"
    ]
   },
@@ -1044,6 +1053,13 @@
     "response  = smartDataframe.chat(\"Make a classifier with the Stage columns as the label column. It's a 3 class classifier\")\n",
     "print(response)\n",
     "print(smartDataframe.last_code_executed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como podemos observar, PandasAI ahora si ha sido capaz de resolver debidamente el problema y ha conseguido una accuracy mayor al 95% lo que es un buen número, faltaría comprobar otras métricas para ver si consigue predecir de forma correcta o solo es capaz de detectar las clases."
    ]
   },
   {
