--- a/AIDE-POTATO_DISEASES/aide-potato.ipynb
+++ b/AIDE-POTATO_DISEASES/aide-potato.ipynb
@@ -116,9 +116,7 @@
    "source": [
     "La ejecución ha costado <label style=\"color:red\">$0.03+ $0.09 = $0.12</label> y aunque después de 1h de ejecución del código, nos ha dado un error en los procesos pero no lo creo releveante ya que aún así nos ha dado 4 distintas opciones para la resolución del ejercicio así como el código que ha usado. Lo único malo es que no hemos conseguido la validación de la solución comparada al resto pero podemos obviarlo si este sale bien. Procedemos a probar el código.\n",
     "\n",
-    "Este tipo de errores suelen ocurrir cuando no especificamos bien lo que queremos hacer con el conjunto de datos o pedimos cosas que no podemos trabajar a la vez.\n",
-    "\n",
-    "Sacamos tanto el código como la matriz de validación de la mejor opción"
+    "Este tipo de errores suelen ocurrir cuando no especificamos bien lo que queremos hacer con el conjunto de datos o pedimos cosas que no podemos trabajar a la vez. Por eso dejo los errores para así saber que estas herramientas fallan y que si vamos a usarlas a menudo es mejor darles el trabajo del preprocesado o la limpieza pesada un poco mejor masticado. "
    ]
   },
   {
