comentarios corregidos en el dataset titanic aide -WORK --CONTROL-COMMIT

--- a/AIDE-TITANIC/aide-titanic.ipynb
+++ b/AIDE-TITANIC/aide-titanic.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a usar AIDE para esta competición para poder así dar feedback en el discord de los creadores de AIDE al subir la puntuación y el código que crea el propio AIDE para que así sean capaces de refinar la herramienta e incluir en las muchas competiciones las medallas que está ganando AIDE."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,6 +29,13 @@
    "source": [
     "import openai\n",
     "import aide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aquí vamos a comprobar el número de modelos que tenemos en mi clave de la api de OpenAI pero probablemente usemos el default de AIDE."
    ]
   },
   {
@@ -1369,13 +1383,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Tenemos una accuracy de <label style=\"color:red\">0.8491620111731844</label> cuando el máximo que he visto en las soluciones de kaggle ha sido 0.80143"
+    "##### Tenemos una accuracy de <label style=\"color:red\">0.8491620111731844</label> cuando el máximo que he visto en las soluciones de kaggle ha sido 0.80143\n",
+    "\n",
+    "Con esto ya subido en la competición podemos ver como hemos obtenido una puntuación de más del 84% de accuracy cuando el máximo visto en la competición ha sido de poco más del 80%. Con esto ya ejecutado podemos ver la potencia de la herramienta."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1396,13 +1407,6 @@
    "source": [
     "pd.read_csv('Data/submission.csv').shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
