dataset noticias AIDE comentarios corregidos -WORK --CONTROL-COMMIT

--- a/AIDE-TRUE_FAKE_NEWS/aide-news.ipynb
+++ b/AIDE-TRUE_FAKE_NEWS/aide-news.ipynb
@@ -11,7 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos a hacer un clasificador de noticias verdaderas y falsas usando AIDE"
+    "En este caso vamos a realizar un clasificador de NLP usando AIDE sobre noticias verdaderas y falsas.\n",
+    "\n",
+    "Este dataset lo podemos encontrar en kaggle --> <a href=\"https://www.kaggle.com/datasets/clmentbisaillon/fake-and-real-news-dataset\"> fake-and-real-news-dataset</a>\n",
+    "\n",
+    "\n",
+    "El objetivo de este es ver como se desempeña la herramienta en un problema de clasificación de NLP."
    ]
   },
   {
@@ -132,6 +137,15 @@
    ],
    "source": [
     "print(f'La validación es de: {best_solution.valid_metric}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Después de una larga ejecución de casi 2 horas y poco más de $0.45 ha acabado de crearse, ejecutarse y optimizarse el algoritmo que vamos a probar ahora mismo. \n",
+    "\n",
+    "Tiene buena pinta y una validación de la solución dentro del propio AIDE casi perfecta."
    ]
   },
   {
@@ -300,6 +314,11 @@
    "source": [
     "Como podemos observar, AIDE ha sido capaz de obtener una puntuación casi perfecta en esta clasificación, ha demostrado ser más que eficaz en este problema."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
