Askbot pandasai corrección y traducción a español -WORK --CONTROL-COMMIT

--- a/PANDASAI-ASKBOT/askbot-pandas-v0.ipynb
+++ b/PANDASAI-ASKBOT/askbot-pandas-v0.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Askbot using PandasAI library"
+    "## Prueba de ASKBOT usando PandasAI"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The motivation of the exercise is to parse the audio from the microphone to text, and and ask to OpenAI model what you said."
+    "Este ejercicion tiene como objetivo hacer un Speech2Text y luego pasarle el texto al modelo que usamos en PandasAI, en este caso haremos una llamada al propio BambooLM.\n",
+    "\n",
+    "La principal utilidad de esto sería usando un modelo propio en el que tengamos toda la información de la empresa y creando un chatbot de ayuda dentro de la página podríamos hacer que los usuario fueran capaces de resolver sus dudas desde un formato en el que hablan con el modelo en lenguaje natural y este hace el procesao de lo dicho y lo pasa como pregunta al modelo, quien se encargaría de generar la solución y devolvérsela al usuario."
    ]
   },
   {
@@ -25,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I wrote every key i need to use the API's like pandasai or openai into a .env file in my root project directory, if u want to use the app you should make one or copy my method"
+    "Tengo todas las claves para las APIs en un fichero .env ya que a veces no me lee las variables de entorno, por eso tengo que importalo con dotenv de forma manual."
    ]
   },
   {
@@ -55,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Global Parameters"
+    "### Parámetros Globales"
    ]
   },
   {
@@ -76,7 +78,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialization\n"
+    "### Inicialización\n",
+    "\n",
+    "Pasar la clave de pandasai\n"
    ]
   },
   {
@@ -94,7 +98,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Record"
+    "### Record Audio\n",
+    "\n",
+    "Este fragmento de código es simplemente para guardar un audio en la carpeta Audios de este mismo directorio."
    ]
   },
   {
@@ -114,7 +120,7 @@
     }
    ],
    "source": [
-    "# This will record audio till we stay 4 seconds without talk\n",
+    "# Guarda todo el audio hasta que pasa un segundo sin recibir señal, entonces para\n",
     "audio = pyaudio.PyAudio()\n",
     "stream = audio.open(\n",
     "    format=FORMAT,\n",
@@ -128,7 +134,7 @@
     "frames = []\n",
     "silence_counter = 0\n",
     "vad = webrtcvad.Vad()\n",
-    "vad.set_mode(3) # <-- Aggressive detection to record voice\n",
+    "vad.set_mode(3) # <-- Modo de detección agresiva de la voz \n",
     "\n",
     "try:\n",
     "    while True:\n",
@@ -146,14 +152,14 @@
     "\n",
     "print(\"\\nFinished recording.\")\n",
     "\n",
-    "# Stop stream\n",
+    "# Guardamos el flujo de stream de audio\n",
     "stream.stop_stream()\n",
     "stream.close()\n",
     "\n",
-    "# Stop PyAudio\n",
+    "# Guardamos el flujo de audio del programa\n",
     "audio.terminate()\n",
     "\n",
-    "# Save the recorded audio as .wav file\n",
+    "# Guardamos el audio en formato .wav\n",
     "with wave.open(\"Audios/recorded_audio.wav\", \"wb\") as audio_recorded:\n",
     "    audio_recorded.setnchannels(CHANNELS)\n",
     "    audio_recorded.setsampwidth(audio.get_sample_size(FORMAT))\n",
@@ -165,16 +171,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After we record and saved the audio we still have to process it with speech2text and ask the question to OpenAI.\n",
+    "Después de grabar y guardar el audio tenemos que procesarlo con un módulo de Speech2Text para poder pasárselo al modelo con el que vamos a trabajar.\n",
     "\n",
-    "When we complete every step, the we would just have convert to speech the generated text and play it (text2speech)"
+    "Como respuesta, el modelo debería devolver la información gráfica por pantalla y si hemos pedido datos tanto de forma gráfica como por voz usando un módulo Text2Speech."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Speech2Text + Text2Speech"
+    "### Modulos Speech2Text & Text2Speech"
    ]
   },
   {
@@ -182,6 +188,13 @@
    "metadata": {},
    "source": [
     "##### Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta función se encarga de pasar a texto todo el contenido en formato audio de una variable, en nuestro caso le pasamos el audio que guardamos en la carpeta Audios del directorio."
    ]
   },
   {
@@ -201,7 +214,7 @@
     "def Speech2Text(audioFile):\n",
     "    with sr.AudioFile(audioFile) as audio:\n",
     "        audioFile = r.record(audio)\n",
-    "        print(\"Audio loaded\")\n",
+    "        print(\"Audio loaded\\n------------------\\n\")\n",
     "        try:\n",
     "            text = r.recognize_google(audioFile)\n",
     "            print(text)\n",
@@ -216,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Transform Speech from previus audio into text"
+    "#### Transformamos el Audio que hemos grabado previamente en texto"
    ]
   },
   {
@@ -253,7 +266,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ask PandasAI"
+    "Como podemos ver el texto dice exactamente lo que grabé previamente en el audio, ahora solo resta pasarle el texto al modelo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Preguntamos a PandasAI"
    ]
   },
   {
@@ -351,13 +371,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Lib problem\n",
+    "##### Principales problemas\n",
     "\n",
-    "To ask correctly to PandasAI, we need to ask about out data (dataframes) and we are asking to pandasAI a question over an empty dataframe so we can't ask to plot anything cause pandasAI works with our dataframes.\n",
+    "Para preguntarle correctamente a PandasAI, necesitamos pasarle uno o varios datafrmaes para que este sea capaz de procesar nuestra pregunta sobre los datos. Como hemos enviado una pregunta sobre un conjunto de datos vacío no podemos plotear nada ya que PandasAI no tiene de dónde sacar la información.\n",
     "\n",
-    "To solve this problem, we need to rewrite the idea of the python application. \n",
+    "Para resolver este problema tendríamos varias opciones:\n",
     "\n",
-    "For the new point of view, i'm going to use a pre-trained Transformer model with the parsed audio record and make the program talk the answer given by the algorithm."
+    "- (1) Cambiar la forma en la que trabaja PandasAI\n",
+    "- (2) Usar un modelo propio en el que tengamos toda la información para que PandasAI sea capaz de procesar la pregunta sobre nuestra información.\n",
+    "- (3) Tener uno o varios dataframes con la información de la empresa o sobre la que queramos preguntar y pasarle la pregunta, también podemos tener toda la información en una base de datos (local o no) y creando un agente o un conector podemos ser capaces de preguntar sobre toda nuestra base de datos con información."
    ]
   }
  ],
