heart_failure PandasAI arreglo comentarios -WORK --CONTROL-COMMIT

--- a/PANDASAI-HEART_FAILURE/pandasai-heart_failure_classification.ipynb
+++ b/PANDASAI-HEART_FAILURE/pandasai-heart_failure_classification.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "el dataset está sacado de kaggle en este enlace, <a href=\"https://www.kaggle.com/datasets/aadarshvelu/heart-failure-prediction-clinical-records/data\">Heart Failure Prediction - Clinical Records 🏥 </a>"
+    "El dataset está sacado de kaggle en este enlace, <a href=\"https://www.kaggle.com/datasets/aadarshvelu/heart-failure-prediction-clinical-records/data\">Heart Failure Prediction - Clinical Records 🏥 </a>\n",
+    "\n",
+    "Este dataset tiene datos de los pacientes y nos indica si estos sufriesen un ataque al corazón si sobrevivirían o no a una operación así como al translado urgente al hospital"
    ]
   },
   {
@@ -91,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tenemos el conjunto de datos y vamos a indicarle que, para aumentar la precisión separe el conjunto de datos en .7(entrenamiento) + .15(validación) + .15(testing). El objetivo del dataset es conseguir predecir si los pacientes sobrevivirán a un fallo cardíaco o no."
+    "Como descripción simplemente vamos a decirle el número de columnas y cuál es la que tenemos como 'target' para la clasificación."
    ]
   },
   {
@@ -102,7 +104,7 @@
    "source": [
     "# Aquí pondemos una pequeña descripción del dataset\n",
     "DESCRIPTION = \"\"\"\n",
-    "The dataset has 13 columns, the labels are DEATH_EVENT column\n",
+    "The dataset has 13 columns, the target columns is DEATH_EVENT with 2 values\n",
     "\"\"\""
    ]
   },
@@ -112,7 +114,7 @@
    "source": [
     "Vamos a pasarle como configuración que use el modelo gpt-4-turbo, al igual que AIDE para tenerlos en igualdad de condiciones en lo que al LLM respecta ya que este no realiza varias iteraciones sobre varios programas buscando cuál es el más óptimo. Este sacará un código, lo ejecutará y nosotros sacaremos el código. \n",
     "\n",
-    "Todas las consultas e input+output prompts los podemos encontrar en el fichero <label style=\"color:#2B2BFF\">pandasai.log</label>"
+    "Todas las consultas e input+output prompts los podemos encontrar en el fichero pandasai.log. No es recomendable entrar a buscar una consulta simple ya que cada vez que hacemos una llamada a PandasAI este copia input y output en el fichero pandasai.log por lo que es un fichero de tamaño considerable con consultas no parecidas sobre las que pandasai tiene constancia para aumentar la velocidad en las siguientes consultas si estas son monotema."
    ]
   },
   {
@@ -171,7 +173,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Coste de ejecuciónn --> <label style=\"color:red\">Parece que no me ha costado nada</label>"
+    "Coste de ejecuciónn --> <label style=\"color:red\">Parece que no me ha costado nada</label> < de $.01"
    ]
   },
   {
@@ -271,6 +273,18 @@
     "print(report)\n",
     "print(conf_matrix)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observando el reporte de la clasificación tenemos puntuaciones de accuracy, recall, f1-score y una matriz de confusió casi perfecta por lo que PandasAI ha sido capaz de clasificar perfectamente el dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
