breast-cancer transformer comentarios corregidos --WORK --CONTROL-COMMIT

--- a/TRANSFORMER-BREAST_CANCER/breast-cancer.ipynb
+++ b/TRANSFORMER-BREAST_CANCER/breast-cancer.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clasificador sobre el cancer de Pecho usando el algoritmo transformer TabPFN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este dataset lo podemos encontrar en kaggle en el siguiente enlace  --> <a href=\"https://www.kaggle.com/datasets/yasserh/breast-cancer-dataset\"> Breast Cancer Dataset</a>\n",
+    "\n",
+    "Vamos a usar por primera vez el algoritmo TabPFN que en principio es un algoritmo de clasificación preentrenado en datasets tabulares capaz de resolver problemas pequeños en menos de 10 segundos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -39,8 +55,6 @@
     "X, y = load_breast_cancer(return_X_y=True)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "\n",
-    "# N_ensemble_configurations controls the number of model predictions that are ensembled with feature and class rotations (See our work for details).\n",
-    "# When N_ensemble_configurations > #features * #classes, no further averaging is applied.\n",
     "\n",
     "classifier = TabPFNClassifier(device='cpu', N_ensemble_configurations=32)\n",
     "\n",
@@ -48,6 +62,22 @@
     "y_eval, p_eval = classifier.predict(X_test, return_winning_probability=True)\n",
     "\n",
     "print('Accuracy', accuracy_score(y_test, y_eval))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como podemos comprobar, el código ejecutado en ínfimo en comparación con otros algoritmos transformer sobre los que tenemos que incluso declarar como queremos que se haga la forward propagation y demás. \n",
+    "\n",
+    "Este algortimo ha sido capaz de clasificar este pequeño dataset en menos de 3 segundos con una puntuación de más del 98%.\n",
+    "\n",
+    "TabPFN es un potente algoritmo pero tiene una serie de limitaciones:\n",
+    "- (1) No es capaz de predecir nada que tenga más de 1000 datos de entrenamiento por lo que su límite de tuplas de entrenamiento es de 1000 N-Tuplas.\n",
+    "- (2) Tampoco podemos pasarle N-Tuplas por que este N está acotado a 100 diferentes variables sobre las que podemos realizar el entrenamiento. No podremos usar diferentes features por encima de 100.\n",
+    "- (3) No es capaz de predecir más de 10 clases de salida por lo que estamos capados por todos los lados.\n",
+    "\n",
+    "A pesar de estos inconvenientes es un algoritmo muy competente siempre que cumplamos las condiciones de su uso y como puedes ver, en apenas 15 líneas de código tienes un clasificador casi perfecto con un puntuación por encima del 98%."
    ]
   }
  ],
