volver a ejecutar para sacar más accuracy -WORK --CONTROL-COMMIT

--- a/TRANSFORMER-EDIBLE_MUSHROOM/edible-mushroom.ipynb
+++ b/TRANSFORMER-EDIBLE_MUSHROOM/edible-mushroom.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binnary clasification using Transformer. An 'Edible Mushroom Dataset'"
+    "## Clasificación binaria para el dataset de Setas venenosas usando algoritmos transformer"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I downloaded this dataset from kaggle, just search the title in the web and there will be."
+    "He sacado el dataset de kaggle --> <a href=\"https://www.kaggle.com/datasets/vishalpnaik/mushroom-classification-edible-or-poisonous\">Mushroom Classification: Edible or Poisonous?</a>"
    ]
   },
   {
@@ -84,9 +84,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Identify the categorical and continous columns:\n",
-    "- *Categorical* --> Those who has an int64 dtype\n",
-    "- *Continous* --> Those who has a float64 dtype"
+    "Para aplicar el modelo TabTransformer tenemos primero que nada, identificar (para este dataset) las columnas categóricas y contínuas:\n",
+    "- *Categóricas* --> Aquellas de tipo int64\n",
+    "- *Contínuas* --> Aquellas con tipo float64"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "source": [
     "categorical_cols = ['cap-diameter', 'cap-shape', 'gill-attachment', 'gill-color', 'stem-width', 'stem-color' ]\n",
     "continous_cols = ['stem-height', 'season']\n",
-    "label_col = 'class'"
+    "label_col = 'class' # Target a clasificar "
    ]
   },
   {
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We apply a categorical encoder to categorical columns\n",
+    "# Aplicamos encoders categóricos para todas las columnas categóritcas\n",
     "label_encoders = {}\n",
     "for col in categorical_cols: \n",
     "    le = LabelEncoder()\n",
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "# We split the dataset into 'data' and 'labels'\n",
+    "# Separamos los datos en data y target, X e y, datos y etiquetas\n",
     "X = dataset.drop(label_col, axis=1)\n",
     "y = dataset[label_col]\n",
     "X.shape, y.shape"
@@ -154,7 +154,7 @@
     }
    ],
    "source": [
-    "# Split into training and testing \n",
+    "# Hacemos un split en entrenamiento y testing \n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "# Separate categotical and continous features\n",
+    "# Ahora separamos los datos en entrenamiento y tesing tanto categórico como contínuo\n",
     "X_train_categ = X_train[categorical_cols].values\n",
     "X_train_cont = X_train[continous_cols].values\n",
     "#\n",
@@ -186,12 +186,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Todo lo que hemos hecho es preparar los datos para que el algoritmo TabTransformer acepte los datos.\n",
+    "\n",
+    "Defimimos el modelo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the TabTransformer model\n",
+    "# Definimos el modelo TabTransformer\n",
     "num_unique_categories = [dataset[col].nunique() for col in categorical_cols]\n",
     "#\n",
     "modelTabTrans = TabTransformer(\n",
@@ -204,6 +213,28 @@
     "    attn_dropout=.1,\n",
     "    ff_dropout=.1\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Voy a explicar los parámetros:\n",
+    "- categories --> Número de objetos únicos en cada variable categórica, tenemos que pasar en formato lista. E.j: (4,6,8,2) \n",
+    "- num_continuous --> Número de features contínuas\n",
+    "- dim --> Dimensión de entrada de los datos, es el homólogo al batch_size en un mlp\n",
+    "- dim_out --> Dimensión de salida, como es clasificación binaria ponermos una neurona con un softmax y ya funciona\n",
+    "- depth --> Número de iteraciones transformer para este modelo (default 6)\n",
+    "- heads --> Número de cabezas para realizar la transformación de los datos en paralelo\n",
+    "- attn_dropout --> Hacemos un dropout en la capa de atención\n",
+    "- ff_dropout --> Dropout en el feed forward"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pasamos los datos a tensores de PyTorch para que los acepte el tabtransformer"
    ]
   },
   {
